# scisa

./: Makefile  README.md  meson.build
scisasm/include/: scisasm.h
scisasm/src/: scisasm.cc
scisavm/include/: scisavm.h
scisavm/src/: scisavm.cc
scripts/: binconv.py
